# hype-copy-trade

./: Cargo.toml  readme.md
info/: spot-meta.json
src/: constants.rs  lib.rs  main.rs  utils.rs
src/handler/: handle_trades_event.rs  handle_user_event.rs  mod.rs
src/sdk/hyperliquid-rust-sdk/src/: lib.rs  meta.rs
src/sdk/hyperliquid-rust-sdk/src/info/: info_client.rs
src/sdk/hyperliquid-rust-sdk/src/ws/: sub_structs.rs  ws_manager.rs
