[package]
name = "hype-copy-trade"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.6"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = {version = "*",features = ["native-tls"]}
tokio-stream = "0.1.17"
futures = "0.3"
anyhow = "1.0"
serde = {version = "1.0.218",features = ["derive"]}
serde_json = "1.0.140"
hyperliquid_rust_sdk = { path = "deps/hyperliquid-rust-sdk" }
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}